Set default custom class to None

--- a/app/views/language_selection.scala.html
+++ b/app/views/language_selection.scala.html
@@ -1,4 +1,4 @@
-@(customClass: Option[String])(implicit lang: Lang)
+@(customClass: Option[String] = None)(implicit lang: Lang)
 
 @import play.api.i18n.Messages
 @import uk.gov.hmrc.urls.Link
